# SWUFE_AutoCourse

./: .gitignore  README.md  config.json  jiaocheng.html  login.py  pyproject.toml  url.html  xkmc.csv  xuanke.py  选课程序.html
src/: clear.py  config.json  jianting.py  jianting.spec  login.py  read.py  xkmc.csv  xkqk.py  xuanke.py  xuanke.spec  新建 文本文档.txt  选课代码.txt  选课代码.xlsx
src/test/: goyinglian.py
