[tool.poetry]
name = "swufe-autocourse"
version = "0.1.0"
description = ""
authors = ["Haohanblue <haohanblue@foxmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
requests = "^2.32.3"
ddddocr = "^1.5.4"
beautifulsoup4 = "^4.12.3"
onnxruntime = "^1.18.0"
numpy = "1.23"
lxml = "^5.2.2"
pyinstaller = "^6.8.0"

[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
